# fastc

./: .gitignore  .mypy.ini  .pylintrc  README.md  install.sh  pyproject.toml  rename.sh  requirements-dev.txt  requirements.txt  setup.py  upload.sh
fastc/: __init__.py  fastc.py  template.py
fastc/classifiers/: centroids.py  embeddings.py  interface.py
server/: config.yaml.example  main.py  requirements.txt
server/docker/: Dockerfile  docker-compose.yaml
server/resources/: inference.py  root.py  version.py
server/scripts/: start-docker.sh  start-server.sh
